--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: build
         run: |
           chmod +x ./gradlew
-          ./gradlew build -x publishing
+          ./gradlew build
       - uses: actions/upload-artifact@v3
         with:
           name: Artifacts
