--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ archives_base_name=maple
 #Fabric api
 fabric_version=0.76.0+1.19.2
 terrablender_version=1.19.2-2.0.1.136
+registrate_version = MC1.19-1.1.5
