--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.21
 
 # Mod Properties
-mod_version=1.19.2-0.0.6-SNAPSHOT
+mod_version=1.19.2-0.0.7
 maven_group=com.skniro
 archives_base_name=maple
 
