--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,11 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.21
 
 # Mod Properties
-mod_version=1.19.2-0.0.9
+mod_version=1.19.2-0.1.0
 maven_group=com.skniro
 archives_base_name=maple
 
 #Fabric api
 fabric_version=0.76.0+1.19.2
 terrablender_version=1.19.2-2.0.1.136
+jei_version=11.5.0.297
