--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ org.gradle.daemon=false
 
 minecraft_version=1.19.2
 terrablender_version=1.19.2-2.0.1.136
+
+maven_group=com.skniro
+archives_base_name=maple
+mod_version=1.19.2-0.1.1Forge
