--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId = "maple" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version = "${file.jarVersion}" #mandatory
+version = "1.19.2-0.1.1Forge" #mandatory
 # A display name for the mod
 displayName = "Maple" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
@@ -62,5 +62,11 @@ modId = "minecraft"
 mandatory = true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
 versionRange = "[1.19.2,1.20)"
+ordering = "NONE"
+side = "BOTH"
+[[dependencies.maple]]
+modId = "terrablender"
+mandatory = true
+versionRange = "[2.0.1.136,)"
 ordering = "NONE"
 side = "BOTH"
