--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.21
 
 # Mod Properties
-mod_version=1.19.2-0.3.0-Beta3
+mod_version=1.19.2-1.0.0-Alpha1
 maven_group=com.skniro
 archives_base_name=maple
 
