Add pink petals.

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ terrablender_version=1.19.2-2.0.1.136
 
 maven_group=com.skniro
 archives_base_name=maple
-mod_version=1.19.2-0.1.1Forge
+mod_version=1.19.2-1.0.0-Forge-Beta1
