New Biome,New recieps,New Blocks,New textures.

--- a/src/main/resources/data/maple/recipes/snowball/snowball_ice.json
+++ b/src/main/resources/data/maple/recipes/snowball/snowball_ice.json
@@ -14,7 +14,7 @@
         }
     },
     "result": {
-        "item": "better_snowball:snowball_ice",
+        "item": "maple:snowball_ice",
         "count": 32
     }
 }
