--- a/src/main/resources/data/maple/recipes/snowball/snowball_stone.json
+++ b/src/main/resources/data/maple/recipes/snowball/snowball_stone.json
@@ -14,7 +14,7 @@
         }
     },
     "result": {
-        "item": "better_snowball:snowball_stone",
+        "item": "maple:snowball_stone",
         "count": 32
     }
 }
