--- a/src/main/resources/data/maple/recipes/snowball/snowball_teleporting.json
+++ b/src/main/resources/data/maple/recipes/snowball/snowball_teleporting.json
@@ -14,7 +14,7 @@
         }
     },
     "result": {
-        "item": "better_snowball:snowball_teleporting",
+        "item": "maple:snowball_teleporting",
         "count": 32
     }
 }
