--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = 'com.skniro'
-version = '1.19.2-0.1.1forge'
+version = "${project.mod_version}"
 
 java {
-    archivesBaseName = 'maple'
+    archivesBaseName = "${project.archives_base_name}"
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
@@ -38,7 +38,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.19.2'
+    mappings channel: 'official', version: "${project.minecraft_version}"
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -151,7 +151,7 @@ dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19.2-43.2.19'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.2.10'
 
     implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${project.terrablender_version}")
     // Real mod deobf dependency examples - these get remapped to your current mappings
