--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId = "maple" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version = "1.19.2-0.1.2Forge" #mandatory
+version = "1.19.2-1.0.0Forge-B3" #mandatory
 # A display name for the mod
 displayName = "Maple" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
@@ -27,7 +27,7 @@ displayName = "Maple" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="http://example.com/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-#logoFile="maple.png" #optional
+#logoFile="maple_maple.png" #optional
 # A text field displayed in the mod UI
 #credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
