--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,15 @@ org.gradle.jvmargs=-Xmx1G
 
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.14.21
+loader_version=0.15.6
+
 
 # Mod Properties
-mod_version=1.20.1-1.1.0-Alpha3
+mod_version=1.20.1-1.1.0-Beta1
 maven_group=com.skniro
 archives_base_name=maple
 
 #Fabric api
-fabric_version=0.86.0+1.20.1
+fabric_version=0.91.1+1.20.1
 terrablender_version=1.20.1-3.0.0.169
 jei_version=11.5.0.297
