--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,12 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 
+mapping_channel=official
+forge_version=47.3.7
 
-minecraft_version=1.19.2
-terrablender_version=1.19.2-2.0.1.136
+minecraft_version=1.20.1
+terrablender_version=1.20.1-3.0.1.7
 
 maven_group=com.skniro
 archives_base_name=maple
-mod_version=1.19.2-1.0.0-Forge-Beta5
+mod_version=1.20.1-1.3.0-Forge
