--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,45 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
 loader_version=0.15.11
-
+ae2_version=15.0.3-alpha
 
 # Mod Properties
-mod_version=1.20.1-1.3.13-Fabric
+mod_version=1.0.0-1.21-Fabric
+forge_mod_version=1.0.0-1.21-Forge
+neoforge_mod_version=1.0.0-1.21-NeoForge
 maven_group=com.skniro
-archives_base_name=maple
-
+archives_base_name=Maple
+mod_author=skniro
+# Dependencies
+# check this on https://modmuss50.me/fabric.html
 #Fabric api
-fabric_version=0.92.2+1.20.1
-terrablender_version=1.20.1-3.0.1.7
-jei_version=11.5.0.297
+fabric_version=0.106.0+1.21.1
+forge_version=52.0.22
+forge_version_range=[46,)
+terrablender_version=1.21.1-4.1.0.3
+
+jei_version=15.2.0.22
+
+# Neoforge Properties
+minecraft_version_range=[1.21,1.22)
+mod_id=maple
+mod_name=Maple
+mod_license=MIT License
+mod_group_id=com.skniro.maple
+mod_description=
+mod_authors=skniro
+
+# Neoforge
+neo_version=21.1.72
+neo_version_range=[21.0,)
+loader_version_range=[2,)
+
+
+
+
+
+
+
